<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dimen_60"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/layout_nav_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_nav_play_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nav_mode" />

            <Button
                android:id="@+id/btn_nav_play_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nav_content" />

            <Button
                android:id="@+id/btn_nav_daynight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nav_daynight" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_nav_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_plan_back_selecter"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nav_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/dimen_20"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_nav_mode_xx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nav_mode_xx" />

        <Button
            android:id="@+id/btn_nav_mode_bz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nav_mode_bz" />

        <Button
            android:id="@+id/btn_nav_mode_jd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nav_mode_jd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nav_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/dimen_20"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/check_connect_dzy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt_nav_content_dzy" />

            <CheckBox
                android:id="@+id/check_connect_xstz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt_nav_content_xstx" />

            <CheckBox
                android:id="@+id/check_connect_aqjs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt_nav_content_aqjs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/check_connect_qflk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt_nav_content_qflk" />

            <CheckBox
                android:id="@+id/check_connect_zxtx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt_nav_content_zxtx" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nav_daynight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/dimen_20"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_nav_daynight_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nav_daynight_day" />

        <Button
            android:id="@+id/btn_nav_daynight_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nav_daynight_night" />

        <Button
            android:id="@+id/btn_nav_daynight_avo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nav_daynight_avo" />
    </LinearLayout>

</RelativeLayout>