<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom" >

    <FrameLayout
        android:id="@+id/mapview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_plan_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_plan_back_selecter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_plan_info"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_plan_Recommend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/dimen_13"
                android:paddingRight="@dimen/dimen_13"
                android:text="@string/route_type_recommend"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bg_plan_fgx" />

            <Button
                android:id="@+id/btn_plan_avoid_congestion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/dimen_13"
                android:paddingRight="@dimen/dimen_13"
                android:text="@string/route_type_avoid_tafficjam"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bg_plan_fgx" />

            <Button
                android:id="@+id/btn_plan_min_distance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/dimen_13"
                android:paddingRight="@dimen/dimen_13"
                android:text="@string/route_type_min_dist"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bg_plan_fgx" />

            <Button
                android:id="@+id/btn_plan_min_toll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/dimen_13"
                android:paddingRight="@dimen/dimen_13"
                android:text="@string/route_type_min_toll"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bg_plan_fgx" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txt_plan_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_plan_unit_time"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_20"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txt_plan_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_plan_unit_diatance"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_20"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bg_plan_fgx_long" />

            <ImageView
                android:id="@+id/img_plan_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_plan_navigation_selecter"
                android:src="@drawable/bg_plan_navigation_1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>